tests/purs/passing/4035/Other.purs
module Other where

type Id :: forall k. k -> k
type Id a = a
